2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/elements/mplex.c: (setup_src_pad),
	(teardown_src_pad):
	Don't use the deprecated gst_element_get_pad().

2008-05-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* examples/directfb/gstdfb.c: (main):
	Don't use the deprecated gst_element_get_pad().

2008-05-28  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: <onkarshinde at gmail dot com>

	* sys/vcd/vcdsrc.c: (gst_vcdsrc_uri_get_uri),
	(gst_vcdsrc_uri_set_uri):
	Allow the track to be set by using the uri. Fixes #535043.

2008-05-28  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/interleave/interleave.c: (gst_interleave_src_query_duration),
	(gst_interleave_src_query_latency), (gst_interleave_src_query):
	Implement latency query.

2008-05-27  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/mpegvideoparse/mpegvideoparse.c:
	Add GST_BUFFER_FLAG_DELTA_UNIT to not I frame buffers

2008-05-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c:
	(gst_rtp_bin_propagate_property_to_jitterbuffer),
	(gst_rtp_bin_change_state), (new_payload_found),
	(new_ssrc_pad_found):
	Break out of callbacks when we are shutting down.
	Make sure no state changes can happen when we reconfigure.

2008-05-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* configure.ac:
	Require CVS core and base for new audio clock reset method.

	* ext/alsaspdif/alsaspdifsink.c: (alsaspdifsink_change_state):
	Reset the audio clock. See #521761.

2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/jack/gstjackaudiosink.c:
	(gst_jack_audio_sink_allocate_channels):
	Include the element name in the port name to avoid duplicate port names.

2008-05-26  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/interleave/deinterleave.c:
	Add another example launch line.

	* gst/interleave/interleave.c: (interleave_24),
	(gst_interleave_finalize), (gst_interleave_base_init),
	(gst_interleave_class_init), (gst_interleave_init),